# Python-starter-kit-FastAPI-WhatsApp-AI-Chatbot

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: plan.md
src/app/: main.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: webhook.py
src/app/core/: config.py  database.py  logging.py
src/app/models/: chat.py
src/app/schemas/: whatsapp.py
src/app/services/: ai.py  chat.py  whatsapp.py
